# JarvisGirl

./: .gitignore  README.md  electron-builder.yml  electron.vite.config.ts  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts
.cargo/: config.toml
config/: config.json
scripts/: bootstrap.cjs  download-core.js  electron-builtin.js  electron-loader.mjs  electron-resolve.mjs  electron-shim.mjs  electron-wrapper.cjs  fix-electron-require.js  gen-icons.cjs  generate-placeholder.js  patch-electron-require.js
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/core/: action.ts  character.ts  emotion.ts  eventBus.ts  expressionPipeline.ts  interactionDetector.ts  live2dDriver.ts  mouseTracker.ts  particleSystem.ts  runtime.ts  stateMachine.ts
src/main/: index.ts  ipc.ts  store.ts  tray.ts  window.ts
src/preload/: index.ts
src/renderer/: App.tsx  index.html
src/renderer/components/: AmbientLight.tsx  CharacterRenderer.tsx  DebugOverlay.tsx  GlassPedestal.tsx  InteractionGate.tsx  LoadingScreen.tsx  ParticleCanvas.tsx  PetCanvas.tsx  Shadow.tsx
src/renderer/events/: EventBus.ts
src/renderer/hooks/: useAnimationFrame.ts  useConfig.ts  useDragWindow.ts  useKeyboardShortcuts.ts  useMousePosition.ts  usePeriodicTimer.ts  useResizeObserver.ts
src/renderer/managers/: AnimationManager.ts  AssetManager.ts  ParticleManager.ts
src/renderer/platform/: ElectronPlatform.ts  PlatformAdapter.ts  PlatformProvider.tsx  (+3 more)
(+20 files in other folders)
