[package]
name = "jarvisgirl-desktop"
version = "2.0.0"
description = "JarvisGirl Desktop Pet"
authors = ["JarvisGirl"]
edition = "2021"

[lib]
name = "jarvisgirl_desktop_lib"
crate-type = ["lib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
